--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
     "url": "https://github.com/43081j/eslint-plugin-lit/issues"
   },
   "homepage": "https://github.com/43081j/eslint-plugin-lit#readme",
+  "dependencies": {
+    "requireindex": "^1.2.0"
+  },
   "devDependencies": {
+    "@types/node": "^10.7.1",
     "chai": "^4.1.2",
     "eslint": "^5.3.0",
     "eslint-config-google": "^0.9.1",
