--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,21 @@
 {
     "extends": "google",
     "parser": "typescript-eslint-parser",
+    "parserOptions": {
+      "ecmaVersion": "2017",
+      "sourceType": "module"
+    },
     "plugins": [
       "typescript"
     ],
     "rules": {
+      "no-unused-vars": "off",
+      "spaced-comment": "off",
+      "comma-dangle": ["error", "never"],
+      "quotes": ["error", "single", {
+        "avoidEscape": true,
+        "allowTemplateLiterals": true
+      }],
       "typescript/class-name-casing": "error",
       "typescript/explicit-function-return-type": "error",
       "typescript/explicit-member-accessibility": "error",
