--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "requireindex": "^1.2.0"
   },
   "devDependencies": {
+    "@types/eslint": "^4.16.3",
+    "@types/estree": "0.0.39",
     "@types/node": "^10.7.1",
     "chai": "^4.1.2",
     "eslint": "^5.3.0",
