--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/eslint": "^4.16.3",
     "@types/estree": "0.0.39",
     "@types/node": "^10.7.1",
+    "babel-eslint": "^9.0.0",
     "chai": "^4.1.2",
     "eslint": "^5.3.0",
     "eslint-config-google": "^0.9.1",
