--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-config-google": "^0.9.1",
     "eslint-plugin-typescript": "^0.12.0",
     "mocha": "^5.2.0",
+    "parse5-htmlparser2-tree-adapter": "^5.1.0",
     "typescript": "^3.0.1",
     "typescript-eslint-parser": "^18.0.0"
   }
