--- a/package.json
+++ b/package.json
@@ -26,12 +26,16 @@
   },
   "homepage": "https://github.com/43081j/eslint-plugin-lit#readme",
   "dependencies": {
+    "parse5": "^5.1.0",
+    "parse5-htmlparser2-tree-adapter": "^5.1.0",
     "requireindex": "^1.2.0"
   },
   "devDependencies": {
     "@types/eslint": "^4.16.3",
     "@types/estree": "0.0.39",
     "@types/node": "^10.7.1",
+    "@types/parse5": "^5.0.0",
+    "@types/parse5-htmlparser2-tree-adapter": "^5.0.1",
     "babel-eslint": "^9.0.0",
     "chai": "^4.1.2",
     "eslint": "^5.3.0",
