--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,12 @@
 {
     "extends": "google",
-    "parser": "typescript-eslint-parser",
+    "parser": "@typescript-eslint/parser",
     "parserOptions": {
       "ecmaVersion": "2017",
       "sourceType": "module"
     },
     "plugins": [
-      "typescript"
+      "@typescript-eslint"
     ],
     "rules": {
       "max-len": ["error", {
@@ -20,18 +20,18 @@
         "avoidEscape": true,
         "allowTemplateLiterals": true
       }],
-      "typescript/class-name-casing": "error",
-      "typescript/explicit-function-return-type": "error",
-      "typescript/explicit-member-accessibility": "error",
-      "typescript/member-delimiter-style": "error",
-      "typescript/member-naming": ["error", {
+      "@typescript-eslint/class-name-casing": "error",
+      "@typescript-eslint/explicit-function-return-type": "error",
+      "@typescript-eslint/explicit-member-accessibility": "error",
+      "@typescript-eslint/member-delimiter-style": "error",
+      "@typescript-eslint/member-naming": ["error", {
         "private": "^__",
         "protected": "^_"
       }],
-      "typescript/no-angle-bracket-type-assertion": "error",
-      "typescript/no-array-constructor": "error",
-      "typescript/no-empty-interface": "error",
-      "typescript/no-explicit-any": "error",
-      "typescript/no-parameter-properties": "error"
+      "@typescript-eslint/no-angle-bracket-type-assertion": "error",
+      "@typescript-eslint/no-array-constructor": "error",
+      "@typescript-eslint/no-empty-interface": "error",
+      "@typescript-eslint/no-explicit-any": "error",
+      "@typescript-eslint/no-parameter-properties": "error"
     }
 }
