--- a/package.json
+++ b/package.json
@@ -34,18 +34,19 @@
     "eslint": ">= 5"
   },
   "devDependencies": {
-    "@types/eslint": "^4.16.5",
+    "@types/eslint": "^4.16.6",
     "@types/estree": "0.0.39",
-    "@types/node": "^10.12.18",
+    "@types/node": "^10.12.24",
     "@types/parse5": "^5.0.0",
     "@types/parse5-htmlparser2-tree-adapter": "^5.0.1",
+    "@typescript-eslint/eslint-plugin": "^1.3.0",
+    "@typescript-eslint/parser": "^1.3.0",
     "babel-eslint": "^10.0.1",
     "chai": "^4.2.0",
-    "eslint": "^5.12.0",
-    "eslint-config-google": "^0.11.0",
+    "eslint": "^5.13.0",
+    "eslint-config-google": "^0.12.0",
     "eslint-plugin-typescript": "^0.14.0",
     "mocha": "^5.2.0",
-    "typescript": "^3.2.2",
-    "typescript-eslint-parser": "^21.0.2"
+    "typescript": "^3.3.3"
   }
 }
