enable test coverage

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ node_js: '10'
 cache: npm
 before_script:
   - npm run lint
-# after_success: npm run test:coverage
+after_success: npm run test:coverage
