--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "chai": "^4.2.0",
     "eslint": "^5.13.0",
     "eslint-config-google": "^0.12.0",
+    "eslint-config-prettier": "^4.0.0",
+    "eslint-plugin-prettier": "^3.0.1",
     "mocha": "^5.2.0",
     "nyc": "^13.3.0",
     "prettier": "^1.16.4",
