--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "eslint-plugin-lit",
-  "version": "0.6.0",
+  "version": "1.0.0",
   "description": "lit-html support for ESLint",
   "main": "lib/index.js",
+  "files": [
+    "lib/!(test)",
+    "docs/",
+    "custom_types"
+  ],
   "scripts": {
     "clean": "rimraf ./lib",
     "lint": "eslint \"src/**/*.ts\"",
