--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "eslint-plugin-lit",
-  "version": "1.2.4",
+  "version": "1.3.0",
   "description": "lit-html support for ESLint",
   "main": "lib/index.js",
   "files": [
     "lib/!(test)",
-    "docs/",
+    "docs",
     "custom_types"
   ],
   "scripts": {
