--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
   },
   "devDependencies": {
     "@types/eslint": "^7.2.4",
-    "@types/estree": "0.0.45",
+    "@types/estree": "^0.0.47",
     "@types/node": "^14.14.2",
     "@types/parse5": "^5.0.3",
     "@types/parse5-htmlparser2-tree-adapter": "^5.0.1",
