--- a/package.json
+++ b/package.json
@@ -46,8 +46,10 @@
     "eslint": ">= 5"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.16",
     "@types/eslint": "^7.2.4",
     "@types/estree": "^0.0.47",
+    "@types/mocha": "^8.2.2",
     "@types/node": "^14.14.2",
     "@types/parse5": "^5.0.3",
     "@types/parse5-htmlparser2-tree-adapter": "^5.0.1",
