--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint": "eslint \"src/**/*.ts\"",
     "prebuild": "npm run clean",
     "build": "tsc",
-    "start": "npm run env npm_config_loglevel=silent -- watch \"npm run dev\" src",
+    "start": "nodemon --watch src --ext ts --exec \"npm run dev\"",
     "dev": "npm run lint && npm run build && npm run test ",
     "test": "nyc --reporter=html --reporter=text-summary mocha \"lib/test/**/*_test.js\"",
     "test:coverage": "nyc report --reporter=text-lcov | coveralls",
@@ -50,9 +50,9 @@
     "@types/eslint": "^7.2.4",
     "@types/estree": "^0.0.47",
     "@types/mocha": "^8.2.2",
-    "@types/node": "^14.14.2",
-    "@types/parse5": "^5.0.3",
-    "@types/parse5-htmlparser2-tree-adapter": "^5.0.1",
+    "@types/node": "^15.0.2",
+    "@types/parse5": "^6.0.0",
+    "@types/parse5-htmlparser2-tree-adapter": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
     "babel-eslint": "^10.1.0",
@@ -60,10 +60,10 @@
     "eslint": "^7.12.0",
     "eslint-config-google": "^0.14.0",
     "mocha": "^8.2.0",
+    "nodemon": "^2.0.7",
     "nyc": "^15.1.0",
     "prettier": "^2.1.2",
     "rimraf": "^3.0.2",
-    "typescript": "^4.0.3",
-    "watch": "^1.0.2"
+    "typescript": "^4.0.3"
   }
 }
