--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "eslint": ">= 5"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.14.3",
+    "@babel/plugin-proposal-decorators": "^7.14.2",
     "@types/chai": "^4.2.16",
     "@types/eslint": "^7.2.4",
     "@types/estree": "^0.0.47",
@@ -54,7 +56,6 @@
     "@types/parse5-htmlparser2-tree-adapter": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
-    "babel-eslint": "^10.1.0",
     "chai": "^4.2.0",
     "eslint": "^7.12.0",
     "eslint-config-google": "^0.14.0",
