--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ jobs:
     strategy:
       matrix:
         node-version: [12.x, 14.x, 15.x, 16.x]
+      fail-fast: false
     steps:
       - name: Checkout
         uses: actions/checkout@v2
