--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "url": "https://github.com/43081j/eslint-plugin-lit/issues"
   },
   "homepage": "https://github.com/43081j/eslint-plugin-lit#readme",
+  "engines": {
+    "node": ">= 12"
+  },
   "dependencies": {
     "parse5": "^6.0.1",
     "parse5-htmlparser2-tree-adapter": "^6.0.1",
