--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
         "ignoreUrls": true
       }
     ],
+    "eqeqeq": "error",
     "no-unused-vars": "off",
     "spaced-comment": "off",
     "comma-dangle": ["error", "never"],
@@ -55,9 +56,12 @@
         "format": ["PascalCase"]
       }
     ],
-    "@typescript-eslint/explicit-function-return-type": ["error", {
-      "allowExpressions": true
-    }],
+    "@typescript-eslint/explicit-function-return-type": [
+      "error",
+      {
+        "allowExpressions": true
+      }
+    ],
     "@typescript-eslint/explicit-member-accessibility": "error",
     "@typescript-eslint/member-delimiter-style": "error",
     "@typescript-eslint/no-array-constructor": "error",
