--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "chai": "^4.2.0",
     "eslint": "^7.12.0",
     "eslint-config-google": "^0.14.0",
+    "espree": "^9.0.0",
     "mocha": "^8.2.0",
     "nodemon": "^2.0.7",
     "nyc": "^15.1.0",
