--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "chai": "^4.2.0",
     "eslint": "^7.12.0",
     "eslint-config-google": "^0.14.0",
+    "eslint-plugin-eslint-plugin": "^4.4.1",
     "espree": "^9.0.0",
     "mocha": "^9.1.2",
     "nodemon": "^2.0.7",
