--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -95,7 +95,7 @@
     "@typescript-eslint/no-empty-interface": "error",
     "@typescript-eslint/no-explicit-any": "error",
     "@typescript-eslint/no-parameter-properties": "error",
-    "eslint-plugin/require-meta-docs-description": "off", // TODO: enable
-    "eslint-plugin/require-meta-type": "off" // TODO: enable
+    "eslint-plugin/require-meta-docs-description": "off",
+    "eslint-plugin/require-meta-type": "off"
   }
 }
