--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "start": "nodemon --watch src --ext ts --exec \"npm run dev\"",
     "dev": "npm run lint && npm run build && npm run test ",
     "test": "nyc --reporter=html --reporter=text-summary --reporter=lcov mocha \"lib/test/**/*_test.js\"",
+    "test-fpui": "nyc --reporter=html --reporter=text-summary --reporter=lcov mocha \"lib/test/rules/tailwind-button-usage_test.js\"",
     "format": "prettier --write \"src/**/*.ts\"",
     "prepare": "npm run build",
     "prepublishOnly": "npm run lint && npm run test"
