--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-plugin-lit",
-  "version": "1.6.1",
+  "version": "1.6.2-wc.0",
   "description": "lit-html support for ESLint",
   "main": "lib/index.js",
   "files": [
