feat: new value-after-constraints rule
Fixes #109

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
     "eqeqeq": "error",
     "no-unused-vars": "off",
     "spaced-comment": "off",
+    "operator-linebreak": "off",
     "comma-dangle": [
       "error",
       "never"
