--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "lit-html support for ESLint",
   "main": "lib/index.js",
   "files": [
-    "lib/!(test)",
+    "lib/",
+    "!lib/test",
     "docs",
     "custom_types"
   ],
