--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "node": ">= 12"
   },
   "dependencies": {
+    "csstree-validator": "^3.0.0",
     "parse5": "^6.0.1",
     "parse5-htmlparser2-tree-adapter": "^6.0.1",
     "requireindex": "^1.2.0"
