--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,9 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install Dependencies
-        run: npm ci
+        run: npm ci --ignore-scripts
+      - name: Build
+        run: npm run build
       - name: Lint
         run: npm run lint
       - name: Test
